--- a/UPVESH/index.html
+++ b/UPVESH/index.html
@@ -38,17 +38,42 @@
         <!-- Main Content -->
         <div class="main-content">
             <!-- Home Section -->
-            <section class="home section">
+            <section class="home section hidden">
                 <div class="container">
                     <div class="intro">
-                        <img src="" alt="Images">
+                        <img src="./images/avatar.jpg" alt="Images">
                         <h1>Upvesh Kumar</h1>
                         <p>I'm a Web Developer</p>
-
+                        <div class="social-links">
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                        </div>
                     </div>
                 </div>
             </section>
             <!-- Home Section End -->
+            <!-- About Section -->
+            <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content">
+                            <div class="row">
+                                <div class="about-text">
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section> 
+            <!-- About Section End -->
         </div>
         <!-- Main Content End -->
     </div>
