frontend my-profile

--- a/PETTERPHUC/index.html
+++ b/PETTERPHUC/index.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <!-- Main Container -->
+    <div class="main-container">
+        <!-- Aside -->
+        <div class="aside">
+            <!-- Menu Icon -->
+            <div class="menu-icon">
+                <span></span>
+            </div>
+            <!-- Menu Icon End -->
+            <ul class="nav">
+                <li><a href="#" class="active"><i class="fa fa-user"></i></a></li>
+                <li><a href="#"><i class="fa fa-phone"></i></a></li>
+                <li><a href="#"><i class="fa fa-edit"></i></a></li>
+                <li><a href="#"><i class="fa fa-briefcase"></i></a></li>
+                <li><a href="#"><i class="fa fa-bookmark-o"></i></a></li>
+            </ul>
+            <div class="down-cv">
+                <a href="#" class="active"><i class="fa fa-cloud-download"></i></a>
+            </div>
+        </div>
+        <!-- Aside End -->
+        <!-- Avatar -->
+        <div class="avatar">
+            <img src="./images/niko_img.jpg" alt="Images">
+            <div class="intro">
+                <h1>Jose Niko</h1>
+                <p>Developer</p>
+                <div class="social-links">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-dribbble"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-behance"></i></a>
+                </div>
+            </div>
+        </div>
+        <!-- Avatar End-->
+        <!-- Main Content -->
+        <div class="main-content">
+            <!-- Home -->
+            <section class="home section hidden">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>about me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content">
+                            <div class="row">
+                                <div class="about-text">
+                                    Prolific, full stack web developer with a passion for metrics and beating former
+                                    "best-yets." Prototyped 25 new product features per year for Flexor, Inc. Decreased
+                                    rework by 22% and costs by 15%. Consistently receive high user experience scores for
+                                    all web development projects, including a 55% increase for Flexor, Inc. Passionate
+                                    about building world class web applications. One of my sites received a 2015 Webby
+                                    for Best Navigation and Structure.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Home End -->
+        </div>
+        <!-- Main Content End -->
+    </div>
+    <!-- Main Container End -->
 </body>
+
 </html>
