--- a/PETTERPHUC/index.html
+++ b/PETTERPHUC/index.html
@@ -49,7 +49,7 @@
         <!-- Main Content -->
         <div class="main-content">
             <!-- Home -->
-            <section class="home section hidden">
+            <section class="home section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -57,15 +57,127 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="about-content">
+                        <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text">
-                                    Prolific, full stack web developer with a passion for metrics and beating former
-                                    "best-yets." Prototyped 25 new product features per year for Flexor, Inc. Decreased
-                                    rework by 22% and costs by 15%. Consistently receive high user experience scores for
-                                    all web development projects, including a 55% increase for Flexor, Inc. Passionate
-                                    about building world class web applications. One of my sites received a 2015 Webby
-                                    for Best Navigation and Structure.
+                                    <h3><span>26 years</span> / <span>Lviv</span> / <span>Freelance</span></h3>
+                                    <p>Prolific, full stack web developer with a passion for metrics and beating former
+                                        "best-yets." Prototyped 25 new product features per year for Flexor, Inc.
+                                        Decreased
+                                        rework by 22% and costs by 15%. Consistently receive high user experience scores
+                                        for
+                                        all web development projects, including a 55% increase for Flexor, Inc.
+                                        Passionate
+                                        about building world class web applications. One of my sites received a 2015
+                                        Webby
+                                        for Best Navigation and Structure.</p>
+                                </div>
+                            </div>
+                            <div class="divide"></div>
+                            <div class="row">
+                                <div class="services">
+                                    <h3 class="title">my services</h3>
+                                    <div class="service-content">
+                                        <div class="row">
+                                            <div class="service-item">
+                                                <i class="fa fa-desktop"></i>
+                                                <h4>development</h4>
+                                                <p>Building a custom tailored solution based on your technical
+                                                    specification.</p>
+                                            </div>
+                                            <div class="service-item">
+                                                <i class="fa fa-rocket"></i>
+                                                <h4>SEO optimization</h4>
+                                                <p>Audit your website, perform technical improvements and write
+                                                    meta
+                                                    tags.</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="service-item">
+                                                <i class="fa fa-database"></i>
+                                                <h4>data base</h4>
+                                                <p>SSL certificate installation and configuration, redirection
+                                                    configuration on your website.</p>
+                                            </div>
+                                            <div class="service-item">
+                                                <i class="fa fa-lock"></i>
+                                                <h4>data security</h4>
+                                                <p>Strategy with leading data protection technology to safeguard
+                                                    your
+                                                    critical data.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="divide"></div>
+                            <div class="row">
+                                <div class="pricing">
+                                    <h3 class="title">my pricing</h3>
+                                    <div class="pricing-content">
+                                        <div class="row">
+                                            <div class="pricing-item">
+                                                <h4>basic</h4>
+                                                <p>$29<span>/hour</span></p>
+                                                <ul>
+                                                    <li class="enabled">consulting</li>
+                                                    <li class="enabled">development</li>
+                                                    <li class="enabled">optimisation</li>
+                                                    <li class="enabled">24/7 support</li>
+                                                </ul>
+                                                <a href="#" class="btn">choose plan</a>
+                                            </div>
+                                            <div class="pricing-item">
+                                                <h4>advanced</h4>
+                                                <p>$39<span>/hour</span></p>
+                                                <ul>
+                                                    <li class="disabled">consulting</li>
+                                                    <li class="disabled">development</li>
+                                                    <li class="disabled">optimisation</li>
+                                                    <li class="disabled">24/7 support</li>
+                                                </ul>
+                                                <a href="#" class="btn">choose plan</a>
+                                            </div>
+                                            <div class="pricing-item">
+                                                <h4>premium</h4>
+                                                <p>$29<span>/hour</span></p>
+                                                <ul>
+                                                    <li class="enabled">consulting</li>
+                                                    <li class="enabled">development</li>
+                                                    <li class="enabled">optimisation</li>
+                                                    <li class="enabled">24/7 support</li>
+                                                </ul>
+                                                <a href="#" class="btn">choose plan</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="divide"></div>
+                            <div class="row">
+                                <div class="facts">
+                                    <h3 class="title">principal facts</h3>
+                                    <div class="fact-content">
+                                        <div class="row">
+                                            <div class="fact-item">
+                                                <p class="num">124</p>
+                                                <p class="name">successul projects</p>
+                                            </div>
+                                            <div class="fact-item">
+                                                <p class="num">89</p>
+                                                <p class="name">happy clients</p>
+                                            </div>
+                                            <div class="fact-item">
+                                                <p class="num">18</p>
+                                                <p class="name">awards won</p>
+                                            </div>
+                                            <div class="fact-item">
+                                                <p class="num">23</p>
+                                                <p class="name">keyboards broken</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
