--- a/UPVESH/index.html
+++ b/UPVESH/index.html
@@ -63,16 +63,98 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="about-content">
+                        <div class="about-content padd-15">
                             <div class="row">
-                                <div class="about-text">
-                                    
+                                <div class="about-text padd-15">
+                                    <h3>I'am Upvesh Kumar and <span>Web Developer</span></h3>
+                                    <p>Hi ! My name is Upvesh Kumar . I am a Web Developer , and I ;am very passionate
+                                        and delicated to my work . With 10 years experience as a professional web
+                                        developer , I have acquired the skills and knowledge necessary to make your
+                                        project a success . I enjoy step of the design process , from discussion and
+                                        collabration</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item padd-15">
+                                            <p>Birthday : <span>5 June 1992</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Age : <span>28</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Website : <span>www.domain.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Email : <span>infor@gmail.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Degree : <span>Mr.Tech</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Phone : <span>+ 91 8800 000 000</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>City : <span>Mumbai</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Freelance : <span>Available</span></p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="buttons padd-15">
+                                            <a href="#" class="btn">Download CV</a>
+                                            <a href="#" class="btn">Hire me</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skills padd-15">
+                                    <div class="row">
+                                        <div class="skill-item padd-15">
+                                            <h5>Javascript</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 76%;"></div>
+                                                <div class="skill-precent">76%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Wordpress</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 90%;"></div>
+                                                <div class="skill-precent">90%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Java</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 80%;"></div>
+                                                <div class="skill-precent">80%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Bootstrap</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 60%;"></div>
+                                                <div class="skill-precent">60%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="education padd-15">
+                                    Hello
+                                </div>
+                                <div class="experience padd-15">
+                                    Hello
                                 </div>
                             </div>
                         </div>
                     </div>
+                    
                 </div>
-            </section> 
+            </section>
             <!-- About Section End -->
         </div>
         <!-- Main Content End -->
