--- a/UPVESH/index.html
+++ b/UPVESH/index.html
@@ -144,20 +144,123 @@
                             </div>
                             <div class="row">
                                 <div class="education padd-15">
-                                    Hello
+                                    <h3 class="title">Education</h3>
+                                    <div class="row">
+                                        <div class="timeline-box">
+                                            <div class="timeline shadow-dark">
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h6>
+                                                    <h4 class="timeline-title">Master In Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur
+                                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                                        consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                                        velit
+                                                        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                                                        occaecat
+                                                        cupidatat non proident, sunt in culpa qui officia deserunt
+                                                        mollit
+                                                        anim id est laborum.</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h6>
+                                                    <h4 class="timeline-title">Master In Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur
+                                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                                        consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                                        velit
+                                                        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                                                        occaecat
+                                                        cupidatat non proident, sunt in culpa qui officia deserunt
+                                                        mollit
+                                                        anim id est laborum.</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h6>
+                                                    <h4 class="timeline-title">Master In Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur
+                                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                                        consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                                        velit
+                                                        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                                                        occaecat
+                                                        cupidatat non proident, sunt in culpa qui officia deserunt
+                                                        mollit
+                                                        anim id est laborum.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="experience padd-15">
-                                    Hello
+                                    <h3 class="title">Experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box">
+                                            <div class="timeline shadow-dark">
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2013 -
+                                                        2015
+                                                    </h6>
+                                                    <h4 class="timeline-title">Master In Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur
+                                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                                                        et
+                                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                                        consequat. Duis aute irure dolor in reprehenderit in
+                                                        voluptate
+                                                        velit
+                                                        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                                                        occaecat
+                                                        cupidatat non proident, sunt in culpa qui officia deserunt
+                                                        mollit
+                                                        anim id est laborum.</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date"><i class="fa fa-calendar"></i> 2013 -
+                                                        2015
+                                                    </h6>
+                                                    <h4 class="timeline-title">Master In Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur
+                                                        adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                                                        et
+                                                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                                        consequat. Duis aute irure dolor in reprehenderit in
+                                                        voluptate
+                                                        velit
+                                                        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                                                        occaecat
+                                                        cupidatat non proident, sunt in culpa qui officia deserunt
+                                                        mollit
+                                                        anim id est laborum.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    
                 </div>
-            </section>
-            <!-- About Section End -->
-        </div>
-        <!-- Main Content End -->
+            </div>
+        </section>
+        <!-- About Section End -->
+    </div>
+    <!-- Main Content End -->
     </div>
     <!-- Main Container End-->
 </body>
