--- a/PETTERPHUC/index.html
+++ b/PETTERPHUC/index.html
@@ -8,6 +8,7 @@
     <title>My Profile</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link href="./images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
@@ -21,19 +22,28 @@
             </div>
             <!-- Menu Icon End -->
             <ul class="nav">
-                <li><a href="#about-me" class="active" onclick="goToPage('about', this)"><i class="fa fa-user"></i></a>
+                <li><a href="#about-me" class="active" onclick="goToPage('about')"><i class="fa fa-user"></i></a>
                 </li>
-                <li><a href="#contact-me" onclick="goToPage('contact',this)"><i class="fa fa-phone"></i></a></li>
-                <li><a href="#my-blog" onclick="goToPage('blog',this)"><i class="fa fa-edit"></i></a></li>
-                <li><a href="#my-work" onclick="goToPage('work',this)"><i class="fa fa-briefcase"></i></a></li>
-                <li><a href="#my-resume" onclick="goToPage('resume',this)"><i class="fa fa-bookmark-o"></i></a></li>
+                <li><a href="#contact-me" onclick="goToPage('contact')"><i class="fa fa-phone"></i></a></li>
+                <li><a href="#my-blog" onclick="goToPage('blog')"><i class="fa fa-edit"></i></a></li>
+                <li><a href="#my-work" onclick="goToPage('work')"><i class="fa fa-briefcase"></i></a></li>
+                <li><a href="#my-resume" onclick="goToPage('resume')"><i class="fa fa-bookmark-o"></i></a></li>
             </ul>
             <div class="down-cv">
                 <a href="https://www.topcv.vn/xem-cv/c1798b6323747ae3f6055830ffce21f7" class="active"><i
                         class="fa fa-cloud-download"></i></a>
             </div>
             <div class="hidden" id="side-bar-toggle">
-                <button onclick="closeSideBar()">đóng</button>
+                <div id="btn-close">
+                    <a onclick="closeSideBar()" id="close"><i class="fa fa-times"></i></a>
+                </div>
+                <ul>
+                    <li><a href="#about-me" onclick="goToPage('about')">About me</a></li>
+                    <li><a href="#contact-me" onclick="goToPage('contact')">Contact me</a></li>
+                    <li><a href="#my-blog" onclick="goToPage('blog')">My blog</a></li>
+                    <li><a href="#my-work" onclick="goToPage('work')">My works</a></li>
+                    <li><a href="#my-resume" onclick="goToPage('resume')">Resume</a></li>
+                </ul>
             </div>
         </div>
         <!-- Aside End -->
@@ -64,12 +74,9 @@
                         <div class="section-description padd-15">
                             <h3><span>22 years old</span> / <span>Ha Noi</span> / <span>.Net Programmer</span>
                             </h3>
-                            <p class="text-description">Hi ! My name is Le Khac Phuc . I am a Web Developer ,
-                                and I am very passionate
-                                and delicated to my work . With 2 years experience as a web
-                                programmer , I have acquired the skills and knowledge necessary to make your
-                                project . I enjoy step of the design process , from discussion and
-                                collabration</p>
+                            <p class="text-description">Hi ! My name is Le Khac Phuc . I am a Web Developer , and I am very passionate and delicated to my work . With 2 years experience as a web programmer , I have acquired the skills and knowledge necessary to make your project
+                                . I enjoy step of the design process , from discussion and collabration
+                            </p>
                         </div>
                     </div>
                     <div class="divide"></div>
@@ -83,34 +90,26 @@
                                             <div class="service-item">
                                                 <i class="fa fa-desktop"></i>
                                                 <h4>development</h4>
-                                                <p class="text-description">Building a custom tailored solution based on
-                                                    your technical
-                                                    specification.</p>
+                                                <p class="text-description">Building a custom tailored solution based on your technical specification.
+                                                </p>
                                             </div>
                                             <div class="service-item">
                                                 <i class="fa fa-rocket"></i>
                                                 <h4>SEO optimization</h4>
-                                                <p class="text-description">Audit your website, perform technical
-                                                    improvements and write
-                                                    meta
-                                                    tags.</p>
+                                                <p class="text-description">Audit your website, perform technical improvements and write meta tags.
+                                                </p>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="service-item">
                                                 <i class="fa fa-database"></i>
                                                 <h4>data base</h4>
-                                                <p class="text-description">SSL certificate installation and
-                                                    configuration, redirection
-                                                    configuration on your website.</p>
+                                                <p class="text-description">SSL certificate installation and configuration, redirection configuration on your website.</p>
                                             </div>
                                             <div class="service-item">
                                                 <i class="fa fa-lock"></i>
                                                 <h4>data security</h4>
-                                                <p class="text-description">Strategy with leading data protection
-                                                    technology to safeguard
-                                                    your
-                                                    critical data.</p>
+                                                <p class="text-description">Strategy with leading data protection technology to safeguard your critical data.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -196,20 +195,15 @@
                             <h2>contact me</h2>
                         </div>
                         <div class="section-description padd-15">
-                            <p class="text-description">If you have any questions regarding this privacy
-                                statement, the practices of this
-                                site or your dealings with me, please do not hesitate to contact at the
-                                above-mentioned address, e-mail address or phone number.</p>
+                            <p class="text-description">If you have any questions regarding this privacy statement, the practices of this site or your dealings with me, please do not hesitate to contact at the above-mentioned address, e-mail address or phone number.</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="section-content padd-15">
                             <div class="row">
                                 <div class="section-item">
-                                    <iframe
-                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.2371333664905!2d105.79860611515214!3d20.983129486023028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135acc3e1f657e1%3A0x77feb691d107c5f!2zMTExIFBo4buRIFRyaeG7gXUgS2jDumMsIFTDom4gVHJp4buBdSwgVGhhbmggVHLDrCwgSMOgIE7hu5lpLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1615698083998!5m2!1sen!2s"
-                                        height="400" style="border:0;width: 100%;" allowfullscreen=""
-                                        loading="lazy"></iframe>
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.2371333664905!2d105.79860611515214!3d20.983129486023028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135acc3e1f657e1%3A0x77feb691d107c5f!2zMTExIFBo4buRIFRyaeG7gXUgS2jDumMsIFTDom4gVHJp4buBdSwgVGhhbmggVHLDrCwgSMOgIE7hu5lpLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1615698083998!5m2!1sen!2s"
+                                        height="400" style="border:0;width: 100%;" allowfullscreen="" loading="lazy"></iframe>
                                     <div class="map-content">
                                         <div class="row">
                                             <ul>
@@ -246,8 +240,7 @@
                                                 <input type="email" name="email" placeholder="email">
                                             </div>
                                             <div class="message-item">
-                                                <textarea name="message" id="" cols="30" rows="10"
-                                                    placeholder="message"></textarea>
+                                                <textarea name="message" id="" cols="30" rows="10" placeholder="message"></textarea>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -295,10 +288,7 @@
                                     Programmer</span>
                             </h3>
                             <p class="text-description">
-                                Web Developer with 2 years of experience in designing and developing user
-                                interfaces, testing, debugging, and training staff within eCommerce
-                                technologies. Proven ability in optimizing web functionality that improve data
-                                retrieval and workflow efficiencies.
+                                Web Developer with 2 years of experience in designing and developing user interfaces, testing, debugging, and training staff within eCommerce technologies. Proven ability in optimizing web functionality that improve data retrieval and workflow efficiencies.
                             </p>
                         </div>
                     </div>
@@ -307,8 +297,8 @@
                         <div class="section-content padd-15">
                             <div class="row">
                                 <div class="section-item">
-                                    <h3 class="title"><i class="fa fa-tachometer" style="color: #00c483;"></i>
-                                        skills</h3>
+                                    <h3 class="title"><i class="fa fa-tachometer" style="color: #00c483;"></i> skills
+                                    </h3>
                                     <div class="skill-content">
                                         <div class="row">
                                             <div class="skill-item">
@@ -346,19 +336,17 @@
                             <div class="divide"></div>
                             <div class="row">
                                 <div class="section-item-50" id="education">
-                                    <h3 class="title"><i class="fa fa-graduation-cap" style="color: #00c483;"></i>
-                                        education</h3>
+                                    <h3 class="title"><i class="fa fa-graduation-cap" style="color: #00c483;"></i> education
+                                    </h3>
                                     <div class="history-content">
                                         <div class="row">
                                             <div class="history-item">
                                                 <p class="time">2017-2021</p>
                                                 <h6>PTIT</h6>
                                                 <p class="address">TranPhu, HaNoi, VietNam</p>
-                                                <p class="text-description">Lorem ipsum, dolor sit amet consectetur
-                                                    adipisicing elit. Dolore reprehenderit perspiciatis velit nostrum
-                                                    omnis autem? Maiores assumenda ducimus aperiam reprehenderit,
-                                                    voluptate odio. Illum dolorem deserunt architecto quia iure fugiat
-                                                    tenetur.</p>
+                                                <p class="text-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore reprehenderit perspiciatis velit nostrum omnis autem? Maiores assumenda ducimus aperiam reprehenderit, voluptate odio. Illum dolorem deserunt
+                                                    architecto quia iure fugiat tenetur.
+                                                </p>
                                             </div>
                                         </div>
                                     </div>
@@ -373,10 +361,8 @@
                                                     <p class="time">2019-Now</p>
                                                     <h6>CTY CO PHAN TIN HOC TAN DAN (TANDAN JSC)</h6>
                                                     <p class="address">ThinhHao 1, HaNoi, VietNam</p>
-                                                    <p class="text-description">Lorem ipsum dolor, sit amet consectetur
-                                                        adipisicing elit. Impedit dicta pariatur fugiat deleniti nihil
-                                                        vero quibusdam quasi neque eius magni earum sapiente repellendus
-                                                        iusto, similique explicabo illum laudantium. Esse, non.</p>
+                                                    <p class="text-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit dicta pariatur fugiat deleniti nihil vero quibusdam quasi neque eius magni earum sapiente repellendus iusto, similique explicabo illum
+                                                        laudantium. Esse, non.</p>
                                                 </div>
 
                                             </div>
