--- a/PETTERPHUC/index.html
+++ b/PETTERPHUC/index.html
@@ -74,7 +74,9 @@
                         <div class="section-description padd-15">
                             <h3><span>22 years old</span> / <span>Ha Noi</span> / <span>.Net Programmer</span>
                             </h3>
-                            <p class="text-description">Hi ! My name is Le Khac Phuc . I am a Web Developer , and I am very passionate and delicated to my work . With 2 years experience as a web programmer , I have acquired the skills and knowledge necessary to make your project
+                            <p class="text-description">Hi ! My name is Le Khac Phuc . I am a Web Developer , and I am
+                                very passionate and delicated to my work . With 2 years experience as a web programmer ,
+                                I have acquired the skills and knowledge necessary to make your project
                                 . I enjoy step of the design process , from discussion and collabration
                             </p>
                         </div>
@@ -90,13 +92,19 @@
                                             <div class="service-item">
                                                 <i class="fa fa-desktop"></i>
                                                 <h4>development</h4>
-                                                <p class="text-description">Building a custom tailored solution based on your technical specification.
+                                                <p class="text-description">Lorem ipsum dolor sit amet consectetur
+                                                    adipisicing elit. Ullam ut eos, nam porro molestias exercitationem
+                                                    aperiam fugit reiciendis minus perferendis aliquam quod quisquam
+                                                    ducimus corporis repudiandae, totam similique ratione rem!
                                                 </p>
                                             </div>
                                             <div class="service-item">
                                                 <i class="fa fa-rocket"></i>
                                                 <h4>SEO optimization</h4>
-                                                <p class="text-description">Audit your website, perform technical improvements and write meta tags.
+                                                <p class="text-description">Lorem ipsum dolor sit amet, consectetur
+                                                    adipisicing elit. Laboriosam distinctio ipsa veritatis, optio dicta
+                                                    doloribus soluta, facilis, rerum nam ducimus illum inventore. Ipsum
+                                                    aut doloremque recusandae dignissimos. Voluptas, iure voluptatum?
                                                 </p>
                                             </div>
                                         </div>
@@ -104,12 +112,18 @@
                                             <div class="service-item">
                                                 <i class="fa fa-database"></i>
                                                 <h4>data base</h4>
-                                                <p class="text-description">SSL certificate installation and configuration, redirection configuration on your website.</p>
+                                                <p class="text-description">Lorem ipsum dolor sit amet consectetur
+                                                    adipisicing elit. Quas expedita rerum, voluptate veritatis corporis
+                                                    nam est nostrum. Cumque, esse impedit fuga culpa aspernatur ab sunt
+                                                    expedita ipsam molestiae nihil modi!</p>
                                             </div>
                                             <div class="service-item">
                                                 <i class="fa fa-lock"></i>
                                                 <h4>data security</h4>
-                                                <p class="text-description">Strategy with leading data protection technology to safeguard your critical data.</p>
+                                                <p class="text-description">Lorem ipsum dolor, sit amet consectetur
+                                                    adipisicing elit. Eius iusto possimus, perferendis cupiditate
+                                                    molestiae ea ullam corrupti, magni sed fugit placeat numquam fugiat
+                                                    debitis, nobis provident? Dolore molestias cum ratione!</p>
                                             </div>
                                         </div>
                                     </div>
@@ -195,15 +209,19 @@
                             <h2>contact me</h2>
                         </div>
                         <div class="section-description padd-15">
-                            <p class="text-description">If you have any questions regarding this privacy statement, the practices of this site or your dealings with me, please do not hesitate to contact at the above-mentioned address, e-mail address or phone number.</p>
+                            <p class="text-description">If you have any questions regarding this privacy statement, the
+                                practices of this site or your dealings with me, please do not hesitate to contact at
+                                the above-mentioned address, e-mail address or phone number.</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="section-content padd-15">
                             <div class="row">
                                 <div class="section-item">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.2371333664905!2d105.79860611515214!3d20.983129486023028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135acc3e1f657e1%3A0x77feb691d107c5f!2zMTExIFBo4buRIFRyaeG7gXUgS2jDumMsIFTDom4gVHJp4buBdSwgVGhhbmggVHLDrCwgSMOgIE7hu5lpLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1615698083998!5m2!1sen!2s"
-                                        height="400" style="border:0;width: 100%;" allowfullscreen="" loading="lazy"></iframe>
+                                    <iframe
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.2371333664905!2d105.79860611515214!3d20.983129486023028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135acc3e1f657e1%3A0x77feb691d107c5f!2zMTExIFBo4buRIFRyaeG7gXUgS2jDumMsIFTDom4gVHJp4buBdSwgVGhhbmggVHLDrCwgSMOgIE7hu5lpLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1615698083998!5m2!1sen!2s"
+                                        height="400" style="border:0;width: 100%;" allowfullscreen=""
+                                        loading="lazy"></iframe>
                                     <div class="map-content">
                                         <div class="row">
                                             <ul>
@@ -240,7 +258,8 @@
                                                 <input type="email" name="email" placeholder="email">
                                             </div>
                                             <div class="message-item">
-                                                <textarea name="message" id="" cols="30" rows="10" placeholder="message"></textarea>
+                                                <textarea name="message" id="" cols="30" rows="10"
+                                                    placeholder="message"></textarea>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -288,7 +307,9 @@
                                     Programmer</span>
                             </h3>
                             <p class="text-description">
-                                Web Developer with 2 years of experience in designing and developing user interfaces, testing, debugging, and training staff within eCommerce technologies. Proven ability in optimizing web functionality that improve data retrieval and workflow efficiencies.
+                                Web Developer with 2 years of experience in designing and developing user interfaces,
+                                testing, debugging, and training staff within eCommerce technologies. Proven ability in
+                                optimizing web functionality that improve data retrieval and workflow efficiencies.
                             </p>
                         </div>
                     </div>
@@ -297,7 +318,7 @@
                         <div class="section-content padd-15">
                             <div class="row">
                                 <div class="section-item">
-                                    <h3 class="title"><i class="fa fa-tachometer" style="color: #00c483;"></i> skills
+                                    <h3 class="title"><i class="fa fa-tachometer" style="color: #db2827;"></i> skills
                                     </h3>
                                     <div class="skill-content">
                                         <div class="row">
@@ -336,7 +357,8 @@
                             <div class="divide"></div>
                             <div class="row">
                                 <div class="section-item-50" id="education">
-                                    <h3 class="title"><i class="fa fa-graduation-cap" style="color: #00c483;"></i> education
+                                    <h3 class="title"><i class="fa fa-graduation-cap" style="color: #db2827;"></i>
+                                        education
                                     </h3>
                                     <div class="history-content">
                                         <div class="row">
@@ -344,7 +366,10 @@
                                                 <p class="time">2017-2021</p>
                                                 <h6>PTIT</h6>
                                                 <p class="address">TranPhu, HaNoi, VietNam</p>
-                                                <p class="text-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore reprehenderit perspiciatis velit nostrum omnis autem? Maiores assumenda ducimus aperiam reprehenderit, voluptate odio. Illum dolorem deserunt
+                                                <p class="text-description">Lorem ipsum, dolor sit amet consectetur
+                                                    adipisicing elit. Dolore reprehenderit perspiciatis velit nostrum
+                                                    omnis autem? Maiores assumenda ducimus aperiam reprehenderit,
+                                                    voluptate odio. Illum dolorem deserunt
                                                     architecto quia iure fugiat tenetur.
                                                 </p>
                                             </div>
@@ -352,7 +377,7 @@
                                     </div>
                                 </div>
                                 <div class="section-item-50" id="experience">
-                                    <h3 class="title"><i class="fa fa-briefcase" style="color: #00c483;"></i> experience
+                                    <h3 class="title"><i class="fa fa-briefcase" style="color: #db2827;"></i> experience
                                     </h3>
                                     <div class="history-content">
                                         <div class="row">
@@ -361,7 +386,10 @@
                                                     <p class="time">2019-Now</p>
                                                     <h6>CTY CO PHAN TIN HOC TAN DAN (TANDAN JSC)</h6>
                                                     <p class="address">ThinhHao 1, HaNoi, VietNam</p>
-                                                    <p class="text-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit dicta pariatur fugiat deleniti nihil vero quibusdam quasi neque eius magni earum sapiente repellendus iusto, similique explicabo illum
+                                                    <p class="text-description">Lorem ipsum dolor, sit amet consectetur
+                                                        adipisicing elit. Impedit dicta pariatur fugiat deleniti nihil
+                                                        vero quibusdam quasi neque eius magni earum sapiente repellendus
+                                                        iusto, similique explicabo illum
                                                         laudantium. Esse, non.</p>
                                                 </div>
 
